my profile page

--- a/index.html
+++ b/index.html
@@ -1,49 +1,46 @@
 <html>
-  <head>
-    <title>My profile page</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css">
-    <meta name="description" content="Page description">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
-    <meta charset="utf-8">
-  </head>
-  <body>
-
-  <div class="container">
-    <div class="card-white" id="introduction">
-    <h1> Elena Dinca 👩‍💻</h1>
-    <img src="images/IMG_3138.JPG" class="img-circle" width="100px" alt="Elena Dinca">
-     <h2>Web Developer student at Le Wagon</h2>
-      <p></p>
-      <p>I am a hardworking, passionate, goal driven individual with over 5 years of experience in coordinating teams.
-      <p>As a dynamic and adaptable person , I gained valuable communication skills during my experience.</p>
-      <p>I am responsible, determined, optimistic and I enjoy new working techniques as I have always been to innovation.</p>
-      <a href="#"><button class="button">Discover my social media 🌍</button></a>
-      <!-- <a href="#" class="btn-blue">Discover my social media 🌍</a> -->
-    </div>
-  <div class="card-white">
-    <h2>Follow me</h2>
-    <ul class="list-inline">
-
-      <li class="list-inline">
-        <a href="https://www.linkedin.com/in/elena-dinca-b9221b112/" target="_blank">
-        <i class="fab fa-linkedin"></i>
-        </a>
-      </li>
-
-      <li class="list-inline">
-        <a href="https://www.instagram.com/elena_dinca25" target="_blank">
-        <i class="fab fa-instagram"></i>
-        </a>
-      </li>
-
-     <li class="list-inline">
-        <a href="https://github.com/Elenadinca25" target="_blank">
-        <i class="fab fa-github"></i>
-        </a>
-        </li>
-       </ul>
+    <head>
+        <title>My new profile page</title>
+        <meta charset="utf-8">
+        <link href="https://fonts.googleapis.com/css?family=Lora:400,700|Roboto:300,400,500,700,900" rel="stylesheet">
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+        <meta name="description" content="Page description">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+    </head>
+    <body>
+      <div class="container">
+        <div class="card-white" id="introduction">
+        <h1> Elena Dinca 👩‍💻</h1>
+        <img src="images/profile-picture.jpg" class="img-circle" width="100px" alt="Profile picture">
+        <h2>Web Developer</h2>
+        <p>Coming from Hospitality Industry, I am now a creative, adaptable and social full-stack junior web developer, looking for exciting opportunity to keep learning among a great team. In addition to my technical skills, I bring strong interpersonal skills, the experience of 5 years of coordinating teams and extensive knowledge in devising and implementing new ideas. An adventurous coder with a
+            passion for trying new things and bringing ideas to life through technology👩‍💻.
+        </p>
+       
+        <a href="https://www.lewagon.com" class="btn-blue">Discover Le Wagon</a>
       </div>
-    </div>
-  </body>
+      <div class="card-white">
+        <h3>Follow me</h3>
+          <ul class="list-inline">
+            <li>
+              <a href="https://github.com/Elenadinca25" target="_blank">
+                <i class="fab fa-github"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://twitter.com/BeTheDj1" target="_blank">
+                <i class="fab fa-twitter-square"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://medium.com/@elenadinca25" target="_blank">
+                <i class="fab fa-medium"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </body>
 </html>
