make my profile prettier

--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
     <body>
       <div class="container">
         <div class="card-white" id="introduction">
-        <h1> Elena Dinca 👩‍💻</h1>
+        <h1> Elena Dinca</h1>
         <img src="images/profile-picture.jpg" class="img-circle" width="100px" alt="Profile picture">
         <h2>Web Developer</h2>
-        <p>Coming from Hospitality Industry, I am now a creative, adaptable and social full-stack junior web developer, looking for exciting opportunity to keep learning among a great team. In addition to my technical skills, I bring strong interpersonal skills, the experience of 5 years of coordinating teams and extensive knowledge in devising and implementing new ideas. An adventurous coder with a
-            passion for trying new things and bringing ideas to life through technology👩‍💻.
+        <p>I am a creative, adaptable and social full-stack junior web developer, looking for exciting opportunity to keep learning among a great team. 👩‍💻
         </p>
        
         <a href="https://www.lewagon.com" class="btn-blue">Discover Le Wagon</a>
