--- a/index.html
+++ b/index.html
@@ -1,45 +1,44 @@
 <html>
-    <head>
-        <title>My new profile page</title>
-        <meta charset="utf-8">
-        <link href="https://fonts.googleapis.com/css?family=Lora:400,700|Roboto:300,400,500,700,900" rel="stylesheet">
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-        <meta name="description" content="Page description">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-    </head>
-    <body>
-      <div class="container">
-        <div class="card-white" id="introduction">
-        <h1> Elena Dinca</h1>
-        <img src="images/profile-picture.jpg" class="img-circle" width="100px" alt="Profile picture">
-        <h2>Web Developer</h2>
-        <p>I am a creative, adaptable and social full-stack junior web developer, looking for exciting opportunity to keep learning among a great team. 👩‍💻
-        </p>
-       
-        <a href="https://www.lewagon.com" class="btn-blue">Discover Le Wagon</a>
+  <head>
+    <title>My profile page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style.css">
+    <meta name="description" content="Page description">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
+    <meta charset="utf-8">
+  </head>
+  <body>
+
+  <div class="container">
+    <div class="card-white" id="introduction">
+    <h1> Elena Dinca</h1>
+    <img src="images/profile-picture.jpg" class="img-circle" width="100px" alt="Elena Dinca">
+     <h2>Web Developer</h2>
+      <p>I am a creative, adaptable and social full-stack junior web developer, looking for exciting opportunity to keep learning among a great team. An adventurous coder with a
+        passion for trying new things and bringing ideas to life through 👩‍💻</p>
+        <br>
+      <a href="https://www.lewagon.com" class="btn-blue">Discover Le Wagon</a>
+    </div>
+    <div class="card-white">
+      <h2>Follow me</h2>
+      <ul class="list-inline">
+      <li class="list-inline">
+        <a href="https://www.linkedin.com/in/elena-dinca-b9221b112/" target="_blank">
+        <i class="fab fa-linkedin"></i>
+        </a>
+      </li>
+      <li class="list-inline">
+        <a href="https://www.instagram.com/elena_dinca25" target="_blank">
+        <i class="fab fa-instagram"></i>
+        </a>
+      </li>
+     <li class="list-inline">
+        <a href="https://github.com/Elenadinca25" target="_blank">
+        <i class="fab fa-github"></i>
+        </a>
+        </li>
+       </ul>
       </div>
-      <div class="card-white">
-        <h3>Follow me</h3>
-          <ul class="list-inline">
-            <li>
-              <a href="https://github.com/Elenadinca25" target="_blank">
-                <i class="fab fa-github"></i>
-              </a>
-            </li>
-            <li>
-              <a href="https://twitter.com/BeTheDj1" target="_blank">
-                <i class="fab fa-twitter-square"></i>
-              </a>
-            </li>
-            <li>
-              <a href="https://medium.com/@elenadinca25" target="_blank">
-                <i class="fab fa-medium"></i>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </body>
+    </div>
+  </body>
 </html>
