make my profile prettier

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1> Elena Dinca</h1>
     <img src="images/profile-picture.jpg" class="img-circle" width="100px" alt="Elena Dinca">
      <h2>Web Developer</h2>
-      <p>I am a creative, adaptable and social full-stack junior web developer, looking for exciting opportunity to keep learning among a great team. An adventurous coder with a
+      <p>I'm a creative, full-stack junior web developer, looking for exciting opportunity to keep learning among a great team. An adventurous coder with a
         passion for trying new things and bringing ideas to life through 👩‍💻</p>
       <a href="https://www.lewagon.com" class="btn-blue">Discover Le Wagon</a>
     </div>
