make my profile prettier

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     </div>
     <div class="card-white">
       <h2>Follow me</h2>
+    <div class="footer-links">
       <ul class="list-inline">
       <li class="list-inline">
         <a href="https://www.linkedin.com/in/elena-dinca-b9221b112/" target="_blank">
@@ -38,6 +39,7 @@
         </a>
         </li>
        </ul>
+      </div>
       </div>
     </div>
   </body>
