make my profile prettier

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <p>I'm a creative full-stack junior web developer, looking for exciting opportunity to keep learning among a great team. An adventurous coder with a
         passion for trying new things and bringing ideas to life through 👩‍💻</p>
         <br>
-      <a href="https://www.lewagon.com" class="btn-blue">Discover Le Wagon</a>
+      <a href="https://www.lewagon.com" class="btn-blue" target="_blank">Discover Le Wagon</a>
     </div>
     <div class="card-white">
       <h2>Follow me</h2>
